# diafit-backend

./: .env.dist  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  signals.py  urls.py
accounts/migrations/: 0001_initial.py  0002_usersettings_glucose_target_high_and_more.py  0003_alter_usersettings_timezone.py
accounts/models/: usersettings.py
accounts/views/: settings.py
api/: api.py
api/router/: __init__.py  bolus.py  cgm.py  heart_rate.py  meal.py  sleep.py  summary.py
api/schemas/: __init__.py  bolus_schema.py  cgm_schema.py  hr_schema.py  meal_schema.py  sleep_schema.py  summary_schema.py
charts/charts/: __init__.py  base.py  target_range.py  util.py
core/: colors.py  settings.py  urls.py
core/templates/: base.html  login.html  start_page.html
diafit_backend/: admin.py  apps.py
diafit_backend/config/: colors.py
diafit_backend/features/: cluster_treatments.py
diafit_backend/migrations/: 0001_initial.py  0002_bolusentity.py  0003_alter_bolusentity_timestamp_utc.py  0004_mealentity.py  0005_alter_bolusentity_pump_id_and_more.py  0006_sleepsessionentity_sleepstageentity_and_more.py  0007_sleepsessionentity_type.py  0008_heartrateentity.py  0009_sleepsessionentity_device.py
diafit_backend/models/: __init__.py  bolus_entity.py  cgm_entity.py  hr_entity.py  meal_entity.py  sleep_entity.py
home/: urls.py  views.py
home/templates/: home.html
interactions/: __init__.py  admin.py  apps.py  middleware.py  models.py
summary/: apps.py  signals.py  urls.py  views.py
(+86 files in other folders)
