[project]
name = "diafit-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-ninja>=1.4.5",
    "django-q2>=1.8.0",
    "gunicorn>=23.0.0",
    "numpy>=2.3.4",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]
